--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OAUTH</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Google Oauth Practise</h1>
+    <h1 class="text-center mt-3">Google Oauth Practise</h1>
 
     <% if (user) { %>
-        <p>Hello, <%= user.displayName %>!</p>
-        <a href="/logout">Logout</a>
-        <% } 
-        else { %>
-            <p>You are not logged in.</p>
-            <a href="/auth/google">Login with Google</a>
-    <% } %>
+        <div class="container">
+            <h3 class="text-center mt-4 mb-3">Hello, <%= user.displayName %>!</h3>
+        </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+            <a href="/logout" class="btn btn-danger">Logout</a>
+        </div>
+        <% } else { %>
+            <%- include('login.ejs') %>
+                <% } %>
 </body>
 
 </html>
