--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,14 +18,14 @@
                         Login
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form action="/login" method="POST">
                             <div class="form-group">
                                 <label for="email">Email address</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Password">
+                                <input type="password" class="form-control"     name="password" id="password" placeholder="Password" required>
                             </div>
                             <button type="submit" class="btn btn-primary">Login</button>
                         </form>
